# hubspot-mcp-pkce-proxy

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  SPEC.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
infra/: .gitignore  README.md  acr.tf  certificate.tf  container_app.tf  container_env.tf  custom_domain.tf  deploy.sh  dns.tf  identity.tf  main.tf  network.tf  outputs.tf  variables.tf
infra/tests/: validate.sh
scripts/: test_discovery.sh
src/hubspot_mcp_proxy/: app.py  config.py  crypto.py  db.py  hub_client.py  models.py  pkce.py
src/hubspot_mcp_proxy/routes/: authorize.py  callback.py  mcp_proxy.py  metadata.py  register.py  token.py
tests/: conftest.py  test_authorize.py  test_callback.py  test_config.py  test_crypto.py  test_db.py  test_integration.py  test_mcp_proxy.py  test_metadata.py  test_pkce.py  test_register.py  test_request_logging.py  test_token.py
