[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hubspot-mcp-proxy"
version = "0.1.0"
description = "PKCE-injecting OAuth proxy for HubSpot MCP + Copilot Studio"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "aiosqlite>=0.21",
    "pydantic-settings>=2.7",
    "python-multipart>=0.0.18",
    "cryptography>=44.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "respx>=0.22",
    "httpx",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
